--- a/app/stylus/style.styl
+++ b/app/stylus/style.styl
@@ -1,3 +1,9 @@
 body
-	background-color #000
-	color white
+	background-color #fff
+	color black
+.calendar-day.empty
+	background-color grey
+.calendar-day.weekend
+	background-color yellow
+.calendar-day
+	background-color green
